--- a/cardtracker-web/package.json
+++ b/cardtracker-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-app",
+  "name": "cardtracker",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,11 +13,18 @@
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^4.6.0",
+    "jwt-decode": "^3.1.2",
+    "page": "^1.11.6",
     "sirv-cli": "^1.0.0"
   }
 }
